Ensure that we consistently check contains: paint for fixed position containment.

contains: paint; should contain fixed position descendants, however we had only
updated this check in one place while we have many other places in the code
which simply checked for having transform related properties. This patch
attempts to unify all of these code paths to call through
ComputedStyle::canContainFixedPositionObjects.

TEST=fast/css/containment/paint-containment-with-fixed-position-scrolled.html, LayoutGeometryMapTest.ContainsFixedPositionTest, MapCoordinatesTest.FixedPosInTransform, MapCoordinatesTest.FixedPosInContainPaint
BUG=619999

Review-Url: https://codereview.chromium.org/2173963002
Cr-Commit-Position: refs/heads/master@{#408002}

Former-commit-id: 139b50e91d0d86ad4ee31957a003dad264f38435